[workspace]

members = [
    "aggregator",
    "baby-liminal-extension",
    "bin/node",
    "bin/runtime",
    "clique",
    "finality-aleph",
    "pallets/aleph",
    "pallets/baby-liminal",
    "pallets/elections",
    "pallets/support",
    "poseidon",
    "primitives",
]

exclude = [
    "aleph-client",
    "benches/payout-stakers",
    "bin/cliain",
    "contracts/access_control",
    "contracts/adder",
    "contracts/adder",
    "contracts/button",
    "contracts/game_token",
    "contracts/marketplace",
    "contracts/poseidon_host_bench",
    "contracts/simple_dex",
    "contracts/ticket_token",
    "contracts/wrapped_azero",
    "e2e-tests",
    "flooder",
    "fork-off",
    "relations",
    "relations/src/proc_macro",
    "scripts/synthetic-network/synthetic-link",
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1
