[package]
name = "aleph_client"
version = "2.15.0"
edition = "2021"
license = "Apache 2.0"

[dependencies]
async-trait = "0.1.58"
anyhow = "1.0"
codec = { package = 'parity-scale-codec', version = "3.0.0", features = ['derive'] }
hex = { version = "0.4.3", features = ["alloc"] }
log = "0.4"
thiserror = "1.0"
serde_json = { version = "1.0.94" }
contract-transcode = "2.1.0"
ink_metadata = "4.0.1"
subxt = "0.25.0"
futures = "0.3.25"
serde = { version = "1.0", features = ["derive"] }

frame-support = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.38" }
sp-runtime = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.38" }
pallet-contracts-primitives = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.38" }

pallet-baby-liminal = { path = "../pallets/baby-liminal", optional = true }
primitives = { path = "../primitives" }

[dev-dependencies]
tokio = "1.21"

[features]
liminal = [
    "pallet-baby-liminal/std",
]
