[package]
name = "aleph_client"
version = "3.2.0"
edition = "2021"
authors = ["Cardinal"]
documentation = "https://docs.rs/aleph_client"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://alephzero.org"
repository = "https://github.com/Cardinal-Cryptography/aleph-node"
description = "This crate provides a Rust application interface for submitting transactions to `aleph-node` chain."

[dependencies]
async-trait = "0.1.58"
anyhow = "1.0"
codec = { package = 'parity-scale-codec', version = "3.0.0", features = ['derive'] }
hex = { version = "0.4.3", features = ["alloc"] }
log = "0.4"
thiserror = "1.0"
serde_json = { version = "1.0.94" }
contract-transcode = "2.1.0"
ink_metadata = "4.0.1"
subxt = "0.25.0"
futures = "0.3.25"
serde = { version = "1.0", features = ["derive"] }

# In order to publish `aleph-client`, we have to provide dependency from crates.io registry. While we could pass
# also `git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.38"` (as in
# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#multiple-locations), this would pose a risk
# that there are subtle differences between local building and crates.io-based building. Hence we stick to just
# versioned dependency.
pallet-contracts-primitives = { version = "7.0.0" }

primitives = { path = "../primitives" }

[dev-dependencies]
tokio = "1.21"

[features]
liminal = []
