[package]
name = "aleph_client"
version = "3.7.2"
edition = "2021"
authors = ["Cardinal"]
documentation = "https://docs.rs/aleph_client"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://alephzero.org"
repository = "https://github.com/Cardinal-Cryptography/aleph-node"
description = "This crate provides a Rust application interface for submitting transactions to `aleph-node` chain."

[dependencies]
async-trait = "0.1.58"
anyhow = "1.0"
codec = { package = 'parity-scale-codec', version = "3.0.0", features = ['derive'] }
hex = { version = "0.4.3", features = ["alloc"] }
log = "0.4"
thiserror = "1.0"
serde_json = { version = "1.0.94" }
contract-transcode = "3.2.0"
ink_metadata = { version = "4.3.0" }
subxt = { version = "0.30.1", features = ["substrate-compat"] }
futures = "0.3.25"
serde = { version = "1.0", features = ["derive"] }

pallet-contracts-primitives = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.2.0", default-features = false }

primitives = { path = "../primitives" }

[dev-dependencies]
tokio = "1.21"

[features]
liminal = []
