[package]
name = "baby-liminal-extension"
version = "0.1.0"
authors = ["Cardinal"]
edition = "2021"
homepage = "https://alephzero.org"
repository = "https://github.com/aleph-zero-foundation/aleph-node"
license = "Apache-2.0"

[dependencies]
# Frontend dependencies:

ink = { version = "5.0.0-rc", default-features = false, optional = true }
sp-core = { default-features = false, git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.2.0", optional = true }

# Backend dependencies:

log = { version = "0.4", default-features = false, optional = true }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"], optional = true }

frame-support = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.2.0", default-features = false, optional = true }
frame-system = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.2.0", default-features = false, optional = true }
pallet-contracts = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.2.0", default-features = false, optional = true }
sp-std = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.2.0", default-features = false, optional = true }

## Proof verification dependencies:

aleph-runtime-interfaces = { path = "../runtime-interfaces", default-features = false, optional = true }
pallet-vk-storage = { path = "../pallets/vk-storage", default-features = false, optional = true }

# Benchmarking

frame-benchmarking = { default-features = false, git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.2.0", optional = true }

[dev-dependencies]
aleph-runtime = { path = "../bin/runtime", features = ["liminal"] }

[build-dependencies]
halo2_proofs = { git = "https://github.com/Cardinal-Cryptography/pse-halo2", branch = "aleph", default-features = false, features = ["mock-kzg-params"] }

[features]
# This is an artificial feature that is used by 3rd party crates in macro expansions.
std = []

# `runtime` and `runtime-std` features are dedicated to the runtime crate. They bring the backend part of the extension.
runtime = [
    "log",
    "scale",
    "frame-support",
    "frame-system",
    "pallet-contracts",
    "sp-std",
    "pallet-vk-storage",
    "aleph-runtime-interfaces/liminal",
]
runtime-std = [
    "runtime",
    "std",
    "scale/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-contracts/std",
    "sp-std/std",
    "pallet-vk-storage/std",
    "aleph-runtime-interfaces/liminal-std",
]

# `ink` and `ink-std` features are dedicated to the ink! part of the extension. They bring the smart contract part of
# the extension.
ink = [
    "dep:ink",
    "sp-core",
]
ink-std = [
    "ink",
    "std",
    "ink/std",
    "sp-core/std",
]

runtime-benchmarks = [
    "runtime",
    "frame-benchmarking",
]
