[package]
name = "baby-liminal-extension"
version = "0.1.0"
authors = ["Cardinal", "Aleph Zero Foundation"]
edition = "2021"
homepage = "https://alephzero.org"
repository = "https://github.com/Cardinal-Cryptography/aleph-node"
license = "Apache-2.0"

[dependencies]
# Frontend dependencies:

ink = { version = "5.0.0-rc", optional = true, default-features = false }
sp-core = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.6.0", optional = true }

# Backend dependencies:

getrandom = { version = "0.2.15", features = ["js"], optional = true }
log = { version = "0.4", default-features = false, optional = true }
parity-scale-codec = { version = "3.6", features = ["derive"], optional = true }

frame-support = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.6.0", default-features = false, optional = true }
frame-system = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.6.0", default-features = false, optional = true }
pallet-contracts = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.6.0", default-features = false, optional = true }
sp-std = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.6.0", default-features = false, optional = true }

pallet-feature-control = { path = "../pallets/feature-control", default-features = false, optional = true }

## Proof verification dependencies:

aleph-runtime-interfaces = { path = "../runtime-interfaces", optional = true, default-features = false }
pallet-vk-storage = { path = "../pallets/vk-storage", optional = true, default-features = false }

# Benchmarking

frame-benchmarking = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.6.0", default-features = false, optional = true }
paste = { version = "1.0", optional = true }

[dev-dependencies]
aleph-runtime = { path = "../bin/runtime" }

[build-dependencies]
halo2_proofs = { git = "https://github.com/Cardinal-Cryptography/pse-halo2", branch = "aleph", features = ["mock-kzg-params", "multicore"]  }

[features]
# This is an artificial feature that is used by 3rd party crates in macro expansions.
std = []

# `runtime` and `runtime-std` features are dedicated to the runtime crate. They bring the backend part of the extension.
runtime = [
    "getrandom",
    "log",
    "parity-scale-codec",
    "frame-support",
    "frame-system",
    "pallet-contracts",
    "sp-std",
    "pallet-feature-control",
    "pallet-vk-storage",
    "aleph-runtime-interfaces",
]
runtime-std = [
    "runtime",
    "std",
    "parity-scale-codec?/std",
    "frame-support?/std",
    "frame-system?/std",
    "pallet-contracts?/std",
    "sp-std?/std",
    "pallet-feature-control?/std",
    "pallet-vk-storage?/std",
    "aleph-runtime-interfaces?/std",
]

# `ink` and `ink-std` features are dedicated to the ink! part of the extension. They bring the smart contract part of
# the extension.
ink = [
    "dep:ink",
    "sp-core",
]
ink-std = [
    "ink",
    "std",
    "ink?/std",
    "sp-core?/std",
]

runtime-benchmarks = [
    "runtime",
    "frame-benchmarking",
    "paste",
]
