[package]
name = "common"
version = "0.1.0"
edition = "2021"

# client
[dependencies.substrate-api-client]
git = "https://github.com/scs/substrate-api-client"
rev = "aa4b84f8775f972e5967aca3d96dd163619f65d5"

[dependencies]
# Substrate dependencies
sp-core = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master", features = ["full_crypto"] }

# other dependencies
log = "0.4"
