[package]
name = "common"
version = "0.1.0"
edition = "2021"

# client
[dependencies.substrate-api-client]
git = "https://github.com/Cardinal-Cryptography/substrate-api-client.git"
tag = "fixed_dependencies"

[dependencies]
# Substrate dependencies
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", features = ["full_crypto"] }

# other dependencies
log = "0.4"
serde_json = { version = "1.0" }
ws = { version = "0.9.1", features = ["ssl"] }
mio = { version = "0.6.14" }
