[package]
name = "aleph-e2e-client"
version = "0.3.1"
edition = "2021"
license = "Apache 2.0"

[dependencies]
anyhow = "1.0"
clap = { version = "3.0", features = ["derive"] }
env_logger = "0.8"
hex = "0.4.3"
log = "0.4"
serde_json = "1.0"
codec = { package = 'parity-scale-codec', version = "3.0", default-features = false, features = ['derive'] }
rayon = "1.5"

sp-core = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.26", default-features = false, features = ["full_crypto"] }
sp-runtime = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.26", default-features = false }
frame-support = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.26", default-features = false }
system = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.26", package = "frame-system" }
pallet-staking = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.26", default-features = false }
pallet-balances = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.26", default-features = false }

aleph_client = { path = "../aleph-client" }
primitives = { path = "../primitives", features = ["short_session"], default-features = false }
pallet-elections = { path = "../pallets/elections" }

[features]
default = ["std"]
std = [
    "pallet-staking/std",
    "pallet-balances/std",
    "primitives/std"
]
